Discussion pp-cell no and collagen vs curvature

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -348,10 +348,25 @@ Negative correlations , if we ignore the trivial case where one variable is meas
 We envisage that fibroblast differentiation and pre-papilla cell differentiation are in a tradeoff relationship, with respect to some resource required for differentiation, probably the supply of undifferentiated mesenchymal stem cells. This is illustrated in Figure~\ref{fig:tradeoff}
 \input{figtradeoff.tex}
 
-If there is lots of variation between sheep in the {\em tradeoff genes} and not much genetic variation in the resource genes, then the shared resurce will be limiting, and the numbers of differentiationg pre-papilla cells and fibroblasts will be negatively related, and this will result in a negtivae correlation between numbers of initiating follicles and amount of dermal collagen. This would seem to be the case in the present data. If there is lots of genetic variation in the resource genes, so that the quantity of resource itself varies, then the above correlation may be positive, reflecting a situation where 'more of everytjhing' is possible. 
+If there is lots of variation between sheep in the {\em tradeoff genes} and not much genetic variation in the {\em resource genes}, then the shared resource will be limiting, and the numbers of differentiating pre-papilla cells and fibroblasts will be negatively related, and this will result in a negtive correlation between numbers of initiating follicles and amount of dermal collagen. This would seem to be the case in the present data. If there is lots of genetic variation in the resource genes, so that the quantity of resource itself varies, then the above correlation may be positive, reflecting a situation where 'more of everytjhing' is possible. 
 
-\subsection{pre-papilla cell number and follicle number and fibre diameter}
+\subsection{Pre-papilla cell number and follicle number and fibre diameter}
+A large number of pre-papilla cells does not necessarily lead to a lot of follicles. They may form larger follicles ( more papilla cells per follicle) and thus grow larger fibres ( hight fibre diameter).
+So if we believe the tradeoff relationship between fibroblasts and pre-papille celss discussed above, we should examine the relation between CST measurement  and number of pre-papilla cells. We cant measure number of pre-papilla cells, but we can estimate it by
+\begin{displaymath}
+N = Np pi \frac{Dp}{2}^2 + Ns pi \frac{Ds}{2}^2
+\end{displaymath}
+which is a weighted sum of Np and Ns, the weights being fibre cross sectional areas. N should be proportional to the final number of papilla cells after follicle formation is complete.
+
+What we know from present data is that there are medium correlations of CST with both Fn and Ds. The correlation with Fn is negative and this supports the idea that low collagen means more pre-papilla cells. The correlation with Ds is positive, so this does not support the idea that low collagen means bigger fibres. Diameter determination is more complex than just the number of available pre-papilla cells. 
+
+So the idea that we could use N above as an index of number of papilla cells is probably flawed. We shall not proceed with N. We just note that determining pre-papilla cell number is not the final word on determining follicle number and fibre diameter jointly.
+
 \subsection{Collagen and follicle curvature, follicle unevenness, and SD of fibre diameter}
+There is a serious  question arising from the relation between CST and follicle curvature (Figure~\ref{fig:CSTFc}. We do not understand why a high CST is always a high follicle curvature, but a low CST can be any curvature from 1 to 7. 
+
+The fact that in some sheep follicles curve when the collagen is soft or minimal implies that there is a secondary cause of follicle curvature which is only expressed when CST is low. We do not know what this secondary cause is. 
+
 \subsection{Collagen and wrinkle}
 
 
