Fix brackets in math

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -354,7 +354,7 @@ If there is lots of variation between sheep in the {\em tradeoff genes} and not 
 A large number of pre-papilla cells does not necessarily lead to a lot of follicles. They may form larger follicles ( more papilla cells per follicle) and thus grow larger fibres ( hight fibre diameter).
 So if we believe the tradeoff relationship between fibroblasts and pre-papille celss discussed above, we should examine the relation between CST measurement  and number of pre-papilla cells. We cant measure number of pre-papilla cells, but we can estimate it by
 \begin{displaymath}
-N = Np \pi \frac{Dp}{2}^2 + Ns \pi \frac{Ds}{2}^2
+N = Np \pi \left[\frac{Dp}{2}\right]^2 + Ns \pi \left[\frac{Ds}{2}\right]^2
 \end{displaymath}
 which is a weighted sum of Np and Ns, the weights being fibre cross sectional areas. N should be proportional to the final number of papilla cells after follicle formation is complete.
 
