--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -306,7 +306,7 @@ The skin specimen which is being compressed in CST measurement contains tissues 
 
 We start by noting that the diameter of a follicle stem at sebacious gland level is close to 3 times the diameter of the fibre it contains. So the area of follicle tissue per $mm^{2}$ at that level is
 \begin{displaymath}
-F_{a} = 10^{-6} F_{n} pi \frac{3D}{2}^{2}
+F_{a} = 10^{-6} F_{n} \pi \left[\frac{3D}{2}\right]^{2}
 \end{displaymath}
 $F_{a}$ will vary between 0 and 1 and will represent the follicle tissue area in $mm^{2}$ per $mm^{2}$, so it is unitless. 
 
