--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -12,7 +12,7 @@
 
 \title{Is collagen quantity and properties involved in wrinkle formation and/or in follicle development?}
 \author{Jim Watts and Neville Jackson}
-\date{22 Nov 2017} 
+\date{10 Mar 2018} 
 
  
 \begin{document} 
@@ -348,15 +348,15 @@ Negative correlations , if we ignore the trivial case where one variable is meas
 We envisage that fibroblast differentiation and pre-papilla cell differentiation are in a tradeoff relationship, with respect to some resource required for differentiation, probably the supply of undifferentiated mesenchymal stem cells. This is illustrated in Figure~\ref{fig:tradeoff}
 \input{figtradeoff.tex}
 
-If there is lots of variation between sheep in the {\em tradeoff genes} and not much genetic variation in the {\em resource genes}, then the shared resource will be limiting, and the numbers of differentiating pre-papilla cells and fibroblasts will be negatively related, and this will result in a negtive correlation between numbers of initiating follicles and amount of dermal collagen. This would seem to be the case in the present data. If there is lots of genetic variation in the resource genes, so that the quantity of resource itself varies, then the above correlation may be positive, reflecting a situation where 'more of everytjhing' is possible. 
+If there is lots of variation between sheep in the {\em tradeoff genes} and not much genetic variation in the {\em resource genes}, then the shared resource will be limiting, and the numbers of differentiating pre-papilla cells and fibroblasts will be negatively related, and this will result in a negtive correlation between numbers of initiating follicles and amount of dermal collagen. This would seem to be the case in the present data. If there is lots of genetic variation in the resource genes, so that the quantity of resource itself varies, then the above correlation may be positive, reflecting a situation where 'more of everything' is possible. 
 
 \subsection{Pre-papilla cell number and follicle number and fibre diameter}
 A large number of pre-papilla cells does not necessarily lead to a lot of follicles. They may form larger follicles ( more papilla cells per follicle) and thus grow larger fibres ( hight fibre diameter).
-So if we believe the tradeoff relationship between fibroblasts and pre-papille celss discussed above, we should examine the relation between CST measurement  and number of pre-papilla cells. We cant measure number of pre-papilla cells, but we can estimate it by
+So if we believe the tradeoff relationship between fibroblasts and pre-papille cells discussed above, we should examine the relation between CST measurement  and number of pre-papilla cells. We cant measure number of pre-papilla cells, but we can estimate it by
 \begin{displaymath}
-N = Np \pi \left[\frac{Dp}{2}\right]^2 + Ns \pi \left[\frac{Ds}{2}\right]^2
+N = N_{p} \pi \left[\frac{D_{p}}{2}\right]^2 + N_{s} \pi \left[\frac{D_{s}}{2}\right]^2
 \end{displaymath}
-which is a weighted sum of Np and Ns, the weights being fibre cross sectional areas. N should be proportional to the final number of papilla cells after follicle formation is complete.
+which is a weighted sum of $N_{p}$ and $N_{s}$, the weights being fibre cross sectional areas. N should be proportional to the final number of papilla cells after follicle formation is complete.
 
 What we know from present data is that there are medium correlations of CST with both Fn and Ds. The correlation with Fn is negative and this supports the idea that low collagen means more pre-papilla cells. The correlation with Ds is positive, so this does not support the idea that low collagen means bigger fibres. Diameter determination is more complex than just the number of available pre-papilla cells. 
 
@@ -368,6 +368,11 @@ There is a serious  question arising from the relation between CST and follicle 
 The fact that in some sheep follicles curve when the collagen is soft or minimal implies that there is a secondary cause of follicle curvature which is only expressed when CST is low. We do not know what this secondary cause is. 
 
 \subsection{Collagen and wrinkle}
+This is really a topic requireing further research. We only have a relationship between SkinType and collagen. The "tight" Skintype had higher CST and lower Compressibility, than the other Skintypes. The "tight" SkinType is wrinkled. Therefore, indirctly, wrinkled sheep have more collagen. 
+
+We need to know where the collagen is in the skin in relation to wrinkles, and both the amount and type ( hard or soft) of collagen. That work in proceeding. 
+
+What we can say here is that one of the predisposing factors in the skin leading to wrinkle formation is the presence of large amounts of collagen. Another predisposing factor is excess growth expansion of the dermis, relative to the subdermal layers. This factor is investigated in Jackson and Watts(2018)~\cite{jack:18}, where it is shown that the  proliferation of Sd follicles in the Merino foetus at around 100 days  will cause an excess dermal expansion of 20 to 30 percent, over and above normal growth of all the skin layers. This is sufficient to form a skin fold.
 
 
 \clearpage
@@ -399,6 +404,9 @@ Jackson, N. (2017) Genetics of primary and secondary fibre diameters and densiti
 
 \bibitem{jack:17a}
 Jackson, N. (2017) Genetic relationship between skin and wool traits in Merino sheep. Part I Responses to selection ans estimates of genetic parameters. URL https://github.com/nevillejackson/Fleece-genetics/tree/master/skinandfleeceparameters/ab3220/skinwool1.pdf
+
+\bibitem{jack:18}
+Jackson, N. and Watts, J.E. (2018) Does follicle development affect the spatial layout of sheep skin? URL https://github.com/nevillejackson/Fleece-biology/tree/master/skinspace/skinspace.pdf
 
 \bibitem{jack:90}
 Jackson, N., Maddocks, I.G., Lax, J., Moore, G.P.M. and Watts, J.E. (1990) Merino Evolution, Skin Characteristics, and Fleece Quality. URL https://github.com/nevillejackson/atavistic-sheep/mev/evol.pdf 
