Edit discussion of collagen.tex

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -368,11 +368,13 @@ There is a serious  question arising from the relation between CST and follicle 
 The fact that in some sheep follicles curve when the collagen is soft or minimal implies that there is a secondary cause of follicle curvature which is only expressed when CST is low. We do not know what this secondary cause is. 
 
 \subsection{Collagen and wrinkle}
-This is really a topic requireing further research. We only have a relationship between SkinType and collagen. The "tight" Skintype had higher CST and lower Compressibility, than the other Skintypes. The "tight" SkinType is wrinkled. Therefore, indirctly, wrinkled sheep have more collagen. 
+This is really a topic requiring further research. We only have a relationship between SkinType and collagen. The "tight" Skintype had higher CST and lower Compressibility, than the other Skintypes. The "tight" SkinType is wrinkled. Therefore, indirctly, wrinkled sheep have more collagen. 
+
+We have no data relating compressed skin thickness measurements to various degrees of wrinkle, such as are described by wrinkle scores on the neck and side regions of sheep. 
 
 We need to know where the collagen is in the skin in relation to wrinkles, and both the amount and type ( hard or soft) of collagen. That work in proceeding. 
 
-What we can say here is that one of the predisposing factors in the skin leading to wrinkle formation is the presence of large amounts of collagen. Another predisposing factor is excess growth expansion of the dermis, relative to the subdermal layers. This factor is investigated in Jackson and Watts(2018)~\cite{jack:18}, where it is shown that the  proliferation of Sd follicles in the Merino foetus at around 100 days  will cause an excess dermal expansion of 20 to 30 percent, over and above normal growth of all the skin layers. This is sufficient to form a skin fold.
+What we can say here is that one of the predisposing factors in the skin leading to wrinkle formation is the presence of large amounts of collagen. Another predisposing factor is excess growth expansion of the dermis, relative to the subdermal layers. This latter factor is investigated in Jackson and Watts(2018)~\cite{jack:18}, where it is shown that the  proliferation of Sd follicles in the Merino foetus at around 100 days  will cause an excess dermal expansion of 20 to 30 percent, over and above normal growth of all the skin layers. This is sufficient to form a skin fold. Both predisposing factors must be present for wrinkles to form.
 
 
 \clearpage
