Fibre length x follicle curvature data analysed and added

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -292,7 +292,12 @@ This correlation is 0.30 and is significant $(P<0.01)$.
 The correlations of follicle depth with CSTmean and CMP were small ( 0.23 and -0.11 respectively). THese are not shown as scatterplots.
 
 \subsubsection{Fibre length growth rate}
-We do not have fibre length growth rate data in this dataset.  The best we can do is to look elsewhere for the relationship between follicle curvature and fibre length growth rate. 
+We do not have fibre length growth rate data in this dataset.  The best we can do is to look elsewhere for the relationship between follicle curvature and fibre length growth rate.  We have a dataset consisting of 306 sheep from 12 flocks, for which follicle curvature and mean fibre length growth rate were measured.  These data are plotted in Figure~\ref{fig:fcfl}
+\input{figfcfl.tex}
+Again we get the familiar triangular scatter of points. High follicle curvature sheep only have low fibre length growth rates, but low follicle curvature sheep can have any fibre length growth rate over the full range from 0.4 to 0.8 mm/day. The correlation is -0.52 ( significant $P<0.01$) but this is not very meaningful because of the peculiar scatter of the points. The coloured numbers representing each point identify which of the 12 flocks each sheep came from.
+
+So if follicle curvature indicates presence of lots of collagen, then fibre length growth rate is reduced in the presence of lots of collagen, but can be anything in the presence of low levels of collagen.
+
 
 \subsubsection{Summary of collagen measures and fibre properties}
 
