Fix Mitchell reference

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -431,7 +431,7 @@ Maddocks, I.G. and Jackson, N. (1988) Structural studies of sheep, cattle, and g
 Menton, D.N. and Hess, R.A. (1980) The ultrastructure of collagen in the dermis of tight-skin (Tsk) mutant mice. The Journal of Investigative Dermatology 74:139-147
 
 \bibitem{mitc:84}
-Mitchell, T.W. et al (1984) Wool Technology and Sheep Breeding, No IV, 200-206
+Mitchell, T.W. et al (1984) Some physical and mechanical properties of sheep akin with a comparison of "thick" and "thin" skins. Wool Technology and Sheep Breeding, Vol XXXII, No IV, 200-206
 
 \bibitem{moor:89}
 Moore G.P.M., Jackson, N., and Lax, J. (1989) Evidence of a unique developmental mechanism specifying bot wool follicle density and fibre size in sheep selected for single skin and fleece characters. Genet. Res. Camb. 53:57-62
