Add Conclusion section to depthandcurv.tex

--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -120,8 +120,20 @@ So what needs to be done from here? Well we need to sort out whether the length 
 
 There also needs to be some consideration as to whether follicle curvature is the same thing as intrinsic fibre curvature, and whether the current commercial curvature measurement technology ( Laserscan or OFDA) measures intrinsic fibre curvature. It comes down to whether follicle curvature is the only factor determining intrinsic fibre curvature, or whether there are other  factors perhaps related to the fibre cross sectional distribution of cortical cell types. Understanding the effect of collagen on follicle curvature is a half-way house. We need to know the effect of collagen on intrinsic fibre curvature, not the 'set' we observe in staple crimp, not some 'set' we measure under Laserscan od OFDA standardised measuring conditions, but the real intrincic curvature which is wahat a fibre can always be relaxed to and which is determined by different growth rates of the ortho and para cortical cells in a fibre with a bilaterally segmented cortex.
 
-That being said, this study has progressed out understanding of why sheep with wrinkle and hard collagen differ from plain bodied sheep in wool growth. They differ because the presence of a layer of hard collagen in the dermis affects the size and shape of wool follicles.
+That being said, this study has progressed our understanding of why sheep with wrinkle and hard collagen differ from plain bodied sheep in wool growth. They differ because the presence of a layer of hard collagen in the dermis affects the size and shape of wool follicles. In our discussion we have explored possible mechanisms.
 
+\section{Conclusion}
+Of all the aspects discussed above, one stands out. Here is what we think is actually happening to follicle development in wrinkly sheep.
+
+Follicles develop in the foetus between 60 and 150 days. Papilla cells migrate to  or agglomerate at sites. Sites are thought to be determined by the collagen network. Above each site, at the skin surface, a downgrowth of epidermal tissue occurs, directed toward the site. The papilla cells at the site act as an attractor.  Now, if the site moves sideways after the downgrowth commences, the partially completed downgrowth will curve toward the new site location, resulting in a curved follicle. The downgrowth will always be toward the attractor. The curved follicle will also need to be longer in order for the bulb to reach the papilla cells at the new site. What would cause the site to move? Well  it would seem that development of hard collagen causes the sites to move. This would have to happen at the critical time while the follicle downgrowths were part complete.
+
+Only P and So follicles have sites. So only P and So follicles would be affected by the 'moving site effect'. So look at Figure~\ref{fig:radcurvxcurvlen}. For the wrinkly sheep  (which are the green points) there are the P and So follicles with their curved length > 140 and tiny radius of curvature, at the top left corner of the scatterplot. All the other green points are SD follicles; they do not have defined sites; they curve because the papilla cells aggregate around other follicles and they have to curve to belong to a common follicle opening. They are not long because the papilla cells aggregate close to other follicles.
+
+So what happens in loose or non-wrinkly sheep? Well, the sites dont move, so the P and So follicles are not forced to curve to follow the papilla cells. So in Figure~\ref{fig:radcurvxcurvlen} there are the P and So follicles at the red points on the lower right corner of the scatterplot; they are quite straight ( high radius) and normal length. The rest of the red points are loose sheep Sd follicles, and they are similar to the wrinkly sheep Sd follicles, because they form in the same way, and the collagen hardening does not interfere with Sd's.
+
+So there we have it. Our 'moving site hypothesis' explains  follicle size and shape, and how hard collagen affects follicle development. It does not explain why a curved follicle grows a curved fibre. That, however is quite simple - in order to form inside a curved follicle a fibre must have either more cortical cells or longer cortical cells on the side of the fibre cross section which corresponds to the outer side of the curve. This is simple material science, the outer side of a curved object has to be longer than the inner side. Once a fibre forms in  that way, it retains the intrinsic curvature permanently. That is what we observe. Fibre curvature is a complicated phenomenon because, apart from this intrinsic curvature, fibres can be 'set' into other other degrees of curvature, for example in a staple where the crimp observed is not just intrinsic curvature but a complicated phenomenon involving stretching or unfolding of the intrinsic curvature combined with various setting conditions. Staple crimp is semi-permanent. Fibre intrinsic curvature is permanent ( ie is always recoverable) and is the same thing as follicle curvature.
+
+So why all this concern about crimp and curvature? Well, wrinkly sheep ( and  low density sheep with hard collagen that are not wrinkly, such as Downs Wool Breeds)  all have characteristically highly crimped fleeces. This is one of the outstanding features of wrinkled sheep, so we must explain crimp and curvature, or we have not grasped the wrinkle issue.
 \clearpage
 \begin{thebibliography}{99}
 
