--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -134,6 +134,26 @@ So what happens in loose or non-wrinkly sheep? Well, the sites dont move, so the
 So there we have it. Our 'moving site hypothesis' explains  follicle size and shape, and how hard collagen affects follicle development. It does not explain why a curved follicle grows a curved fibre. That, however is quite simple - in order to form inside a curved follicle a fibre must have either more cortical cells or longer cortical cells on the side of the fibre cross section which corresponds to the outer side of the curve. This is simple material science, the outer side of a curved object has to be longer than the inner side. Once a fibre forms in  that way, it retains the intrinsic curvature permanently. That is what we observe. Fibre curvature is a complicated phenomenon because, apart from this intrinsic curvature, fibres can be 'set' into other other degrees of curvature, for example in a staple where the crimp observed is not just intrinsic curvature but a complicated phenomenon involving stretching or unfolding of the intrinsic curvature combined with various setting conditions. Staple crimp is semi-permanent. Fibre intrinsic curvature is permanent ( ie is always recoverable) and is the same thing as follicle curvature.
 
 So why all this concern about crimp and curvature? Well, wrinkly sheep ( and  low density sheep with hard collagen that are not wrinkly, such as Downs Wool Breeds)  all have characteristically highly crimped fleeces. This is one of the outstanding features of wrinkled sheep, so we must explain crimp and curvature, or we have not grasped the wrinkle issue.
+
+\appendix
+\section{Appendix A}
+Detective stories have almost universal appeal, because they are about the discovery of truth and the triumph of good over evil.  There is even an interpretation of the Bible as a detective story. We need to 'play detective' and embark on a search for clues which might support the 'moving sites hypothesis'.
+
+Lets start with the appearance of follicles in vertical sections from adult sheep. Figure~\ref{fig:follcurv} is a copy of the Nay follicle curvature score drawings. Dr Nay was an artist; these are 3 dimensional drawings; we need to bear that in mind when looking at the curvature of follicles, some are curved in the plane of the page, some are curved in and out of the page. 
+\input{figfollcurv.tex}
+
+The papilla cells ( and therefore the sites in the case of P and So follicles) have to be where the follicle bulbs are. For score 1, the bulbs are all at the same level and directly below the emergence point of the fibre at the epidermal surface. No evidence of movement here. For scores 2 and 3, the bulbs are still all at the same level, but are slightly out of line with the emergence point, so the follicles have a curve, and the sites/papilla cells have moved slightly sideways. For scores 4, 5, 6, and 7 the bulbs are not all at the same level. So do the sites move vertically as well as sideways? It would appear so.  The bulbs are also increasingly out of line with the emergence point, so the follicles curve increasingly, as the scores increase. The sites move sideways as well as vertically. 
+
+What are these follicles in scores 6 and 7 for which the bulb is above the lowest point of the follicle curve and facing upwards?  They would have to be follicles for which the site ( or aggregate of papilla cells) has moved sideways and probably upward after the downgrowth of epidermal tissue has commenced.  They start out straight, then have to curve 'late' in their development, producing the typical 'J' curve with a straight upper shaft and a late curve at the lower end.
+ 
+We have to remember that not all follicles have a site. The Sd follicles  do have a papilla cell aggregate. We do not know  what if anything controls where these Sd aggregates form, but they  seem to cluster alongside existing follicles. We do not know if these Sd papilla cell clusters move, or even if they all form at the same level vertically. So it is difficult to say which might be the Sd follicles in Figure~\ref{fig:follcurv}. There are no distinguishing features - the follicles all look the same. We just know that most of the follicles are Sd's. So what does this suggest. Maybe the Sd follicles are subject to the same papilla cell aggregate movement as the other follicles . Maybe they simply form all over the place initially. 
+
+That is about all we can get out of vertical section from adults. If we had vertical sections of foetal skin we might actually be able to see directly whether follicles curve as they grow. The alternative is that they are bent around afterwards - that still involves movig the 'site', but it also involves dragging the whole fully formed follicle around, which seems biologically unlikely.
+
+We can also have a look at what effects site movement might have on the arrangement of follicles in horizontal sections. We have to bear in mind that horizontal sections are conventionally taken at sebacious gland level, which is well above the bulb region, so any effect of site movement will be minimal. We have to also bear in mind that  follicles and follicle groups are also moved around by expansion of the skin as the animal grows. 
+
+There are some known differences in follicle group arrangement between SRS Merinos and norrmal wrinkly Merinos. 
+
 \clearpage
 \begin{thebibliography}{99}
 
