--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -152,7 +152,16 @@ That is about all we can get out of vertical section from adults. If we had vert
 
 We can also have a look at what effects site movement might have on the arrangement of follicles in horizontal sections. We have to bear in mind that horizontal sections are conventionally taken at sebacious gland level, which is well above the bulb region, so any effect of site movement will be minimal. We have to also bear in mind that  follicles and follicle groups are also moved around by expansion of the skin as the animal grows. 
 
-There are some known differences in follicle group arrangement between SRS Merinos and norrmal wrinkly Merinos. 
+There are some known differences in follicle group arrangement between SRS Merinos and normal wrinkly Merinos.  SRS Merinos tend to have small follicle groups but with a lot of follicles packed into the small group space, that is a high within group density. These small SRS groups tend to be arranged in very ordered rows with wide spaces ( called 'laneways') between the rows containing non-follicle tissue. Whether this more ordered arrangement of follicle groups has  anything to do with absence of site movement is not clear.  What is more likely is that the absence of site movement ( and therefore low follicle curvature) and the ordered groups, and the absence of wrinkle, are all caused by the lack of hard collagen development.  We should consider installing  hard collagen development as a common cause of wrinkle, disordered groups, and site movement with its consequent follicle curvature. This is being dealt with elsewhere (Watts(2018)~\cite{watt:18} in far greater detail.
+
+One observation which comes out in the study referred to above is that hard collagen develops in a layer below the follicle bulbs, but sometimes in extremely wrinkled sheep, it also develops around the follicle bulbs, that is it 'invades' the follicular layer. This would tie in with what we see in the follicle curvature drawings above - the extreme grade 7 score diagram shows follicle bulbs (presumably with their papilla cells) moved around extensively in both the sideways and vertical direction. The hard collagen has to be in amongst those bulbs for it to influence their position, because it has to move the papilla cells to those positions as the follicles are growing.
+
+Well that is about all of the clues to site movement. One of the difficulties is that we are only talking about the sites of P and So follicles being moved. Most of the follicles in Merinos are Sd follicles. We have no idea what affects the placement of the papilla cell aggregates that initiate Sd follicles. We just know that they cluster around other follicles. Because Sd follicles are in greater numbers, what happens to them tends to swamp any effects of P and So follicle placement. 
+
+So can we solve the 'great site movement' mystery? Only partially. We cant finish the detection story with a clear cut answer. It will come out eventually, but not with existing observations. We need a direct measure of 'site movement'. The nearest thing we have to a measure of follicle bulb displacement is the observation of the sagitta (h) of the follicle arc. A large sagitta means the follicle bulb has been displaced, but sagitta is obviously also related to curvature, so it is not a 'clean' measure.  We will just have a brief look at sagitta by plotting curvature ( ie 1/radius of curvature) against curved length of each follicle, with each point shown as the sagitta value. This graph is shown in Figure~\ref{fig:curvxcurvlenxh}.
+\input{figcurvxcurvlenxh.tex}
+ Clearly if sagitta measures bulb displacement, then the most displaced bulbs are both longer follicles and more curved follicles. That is what we have already concluded. So maybe sagitta does measure site movement. 
+
 
 \clearpage
 \begin{thebibliography}{99}
@@ -203,6 +212,8 @@ R Core Team (2013). R: A language and environment for statistical
 \bibitem{watt:17}
 Watts, J.E., Jackson, N., and Ferguson, K.A. (2017) Improvements in fleece weight weight and wool quality of Merino sheep selected visually for high fibre density and length. URL https://github.com/nevillejackson/SRS-Merino/Paper\_2\_Revised\_10\_November\_2017.docx 
 
+\bibitem{watt:18}
+Watts, J.E. (2018) Personal communication
 
 \end{thebibliography}
 \end{document}
