Interpreting sagitta in Appendix

--- a/supplementary/depthandcurv/depthandcurv.tex
+++ b/supplementary/depthandcurv/depthandcurv.tex
@@ -160,7 +160,11 @@ Well that is about all of the clues to site movement. One of the difficulties is
 
 So can we solve the 'great site movement' mystery? Only partially. We cant finish the detection story with a clear cut answer. It will come out eventually, but not with existing observations. We need a direct measure of 'site movement'. The nearest thing we have to a measure of follicle bulb displacement is the observation of the sagitta (h) of the follicle arc. A large sagitta means the follicle bulb has been displaced, but sagitta is obviously also related to curvature, so it is not a 'clean' measure.  We will just have a brief look at sagitta by plotting curvature ( ie 1/radius of curvature) against curved length of each follicle, with each point shown as the sagitta value. This graph is shown in Figure~\ref{fig:curvxcurvlenxh}.
 \input{figcurvxcurvlenxh.tex}
- Clearly if sagitta measures bulb displacement, then the most displaced bulbs are both longer follicles and more curved follicles. That is what we have already concluded. So maybe sagitta does measure site movement. 
+ Clearly if sagitta measures bulb displacement, then the most displaced bulbs are both longer follicles and more curved follicles. That is what we have already concluded. So maybe sagitta does measure site movement.  Anactual measure of bulb displacement would be better, but we must not forget that thick vertical sections are 3D objects. All our measurements - straight length (t) and sagitta (h) are 2D projections and therefore biased. All the calculations we make from the measrements - curved length and radius of curvature - are also biased. A bulb displacement measure would also be biased. 
+
+We must not be carried away with the apparent order of Figure~\ref{fig:curvxcurvlenxh}. It represents a family of curves of equal 'h' value. It is like that because bothe Curvlen and Radcurv are calculated from 'h' ( and 't') by our equations. The separation of the lines of equal 'h' value is simply a property of our equations. We chose to use 1/Radcurv in Figure~\ref{fig:curvxcurvlenxh}, rather than Radcurv as in Figure~\ref{fig:radcurvxcurvlen} simply because it displays the sagitta effect better. So where are the P and So follicles in Figure~\ref{fig:curvxcurvlenxh}? They do not cluster separately as in Figure~\ref{fig:radcurvxcurvlen}, but the loose skin P and So follicles are in the bottom left corner ( with a low sagitta value ), and the wrinkly skin P and So follicles are towards the top right corner along the lines with large sagitta value representing lots of bulb displacement. The bulk of follicles in the middle are Sd's, and probably also follicles which curve out of the plane of measurement.
+
+Finally, what Figure~\ref{fig:curvxcurvlenxh} shows is that sagitta is not just curvature, but a range of combinations of curved length and curvature. Moving the site does cause follicles to curve, but it also causes them to grow longer in order to reach the displaced site. So maybe sagitta is a good measurement of site movement. We will have to think about it.
 
 
 \clearpage
