--- a/supplementary/depthandcurv/figcurvxcurvlenxh.tex
+++ b/supplementary/depthandcurv/figcurvxcurvlenxh.tex
@@ -5,7 +5,7 @@
 \begin{figure}[!h]
   \centering
   \includegraphics[width=1.0\textwidth]{curvxcurvlenxh.png}
-  \caption{Plot of  1/Radius of curvature against curved length of follicles. The agitta height (h) is shown as points labels rangeing from 1 to 29}
+  \caption{Plot of  1/Radius of curvature against curved length of follicles. The sagitta height (h) is shown as point labels rangeing from 1 to 29}
   \label{fig:curvxcurvlenxh}
 \end{figure}
 
